feature: Adicionei sessão de contato na home page. fix: Ajustei o erro que tava dando no link login do header.

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
               <a href="#history">Nossa história</a>
             </li>
             <li>
-              <a href="#">Contato</a>
+              <a href="#contact">Contato</a>
             </li>
             {% comment %} {% if user.is_staff or user.is_superuser %}
             <li>
