--- a/static/css/base/base.css
+++ b/static/css/base/base.css
@@ -44,8 +44,7 @@
     color: var(--azul-escuro);
     font-size: 30px;
     font-weight: 400;
-    text-decoration-line: underline;
-    text-transform: uppercase;;
+    text-transform: uppercase;
   }
   
   .titulo__padrao {
@@ -73,7 +72,6 @@
     font-size: 20px;
     font-weight: 600;
     padding: 20px 0 20px 0;
-    text-decoration-line: underline;  
   }
   
   .logo {
