--- a/static/css/institutional/home/historia.css
+++ b/static/css/institutional/home/historia.css
@@ -27,6 +27,10 @@
     text-align: start;
 }
 
+.texto {
+    padding: 0;
+}
+
 @media screen and (max-width: 425px) {
     .historia ul {
         font-size: 16px;
