feature:Adicionei botão de voltar ao topo da tela na home.

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_dash.html" %}
 {% load static %}
 {% load widget_tweaks %}
 
@@ -11,16 +11,6 @@ Login | {{ block.super }}
 		<link rel="stylesheet" href="{% static "css/formulario/form.css" %}">
 		<link rel="stylesheet" href="{% static "scss/button-submit.scss" %}">
 {% endblock head %}
-
-{% block login-header %}
-		<div id="btn_header_dash">
-				<nav>
-						<ul>
-								<li><a href="{% url "home" %}">VOLTAR</a></li>
-						</ul>
-				</nav>
-		</div>
-{% endblock login-header %}
 
 {% block container %}
 		<main>
