--- a/templates/base_dash.html
+++ b/templates/base_dash.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="{% static 'css/dashboard/base_dash.css' %}" media="screen" />
 {% endblock head %}
 
+{% block nav_header %}{% endblock nav_header %}
+
 {% block container %}
 <main>
 {% block side-menu %}
