--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
         </div>
         <nav class="navbar-collapse collapse" id="navbar-main">
           <ul class="nav navbar-nav">
+            {% block nav_header %}
             <li>
               <a href="#about">Sobre nós</a>
             </li>
@@ -39,6 +40,7 @@
             <li>
               <a href="#contact">Contato</a>
             </li>
+            {% endblock nav_header %}
             {% comment %} {% if user.is_staff or user.is_superuser %}
             <li>
               <a href="{% url 'medicos:agendar_consulta'%}">Agendas</a>
@@ -46,13 +48,13 @@
             {% endif %} {% endcomment %}
             {% if user.is_authenticated %}
               <li><a href="{% url 'accounts:index' %}">Minha Conta</a></li>
-              <li><a href="#" id="button-back" onclick="history.back()">Voltar</a></li>
               <li><button type="submit" class="custom_btn_logout">Sair</button></li>
               <form method="post" action="{% url 'accounts:logout' %}">
                 {% csrf_token %} 
               </form>
               {% else %}
               <li><a href="{% url 'accounts:login' %}">Login</a></li>
+              <li><a href="#" id="button-back" onclick="history.back()">Voltar</a></li>
             {% endif %}
           </ul>
         </nav>
@@ -69,17 +71,14 @@
           {{ message }}
           </div>
         {% endfor %}
-      {% endblock messages %} 
+      {% endblock messages %}  {% endcomment %}
     
-    <div class="row">
-      <div class="col-lg-12">
-        <ul class="list-unstyled">
-          <li class="pull-right"><a href="#top">Voltar ao Topo</a></li>
-        </ul>
-      </div>
+      {% comment %} Botão para voltar ao topo {% endcomment %}
+    <div class="arrow-up hidden" id="arrow-up">
+      <a href="#top"><img src="{% static "img/icons/arrow-up.png" %}" alt=""></a>
     </div>
   </div>
-</div> {% endcomment %}
+</div>
 
 {% block footer %}
     <!-- Aqui começa o rodapé -->
@@ -87,8 +86,8 @@
         <div>
             <section>
                 <p>
-                    Rua da Saúde, 333 - Saúde<br />
-                    São Paulo - SP, CEP: 00000-000
+                  R. do Oratório, 215 - Mooca<br />
+                  São Paulo - SP, 03117-000
                 </p>
             </section>
             <section>
