--- a/static/css/formulario/form.css
+++ b/static/css/formulario/form.css
@@ -77,10 +77,13 @@
     background-color: var(--azul-claro);
 }
 
+.form-dash {
+    margin-left: 6rem;
+}
+
 /* estilo dos inputs na tela de cadastro */
 /* .form-group {
     /* padding: .5rem; */
- 
 
 /* imputis de email e senha na tela de Login */
 .form-control {
