fix: ajustado css das paginas de prontuario e consultas futuras do medico

--- a/medicos/templates/medicos/minha_agenda.html
+++ b/medicos/templates/medicos/minha_agenda.html
@@ -45,6 +45,8 @@
                             Hora: {{ horario }}</p>
                         {% endwith %}
 
+                        <p>Status: <br> {{consulta.status_cons}}</p>
+
                         <img src="{% static 'img/icons/prontuario.svg' %}" alt="ícone ilustrativo prontuário">
 
                     </div>
