--- a/medicos/templates/medicos/prontuario_pacientes.html
+++ b/medicos/templates/medicos/prontuario_pacientes.html
@@ -2,43 +2,36 @@
 
 {% load static %}
 
-{% block head %}
-    <link rel="stylesheet" href="{% static 'css/medico/perfil/listar_consultas.css' %}">
-{% endblock head %}
-
 {% block title %}
-   Prontuários | {{ block.super }}
-{% endblock %}
+    {{ block.super }} | Prontuários
+{% endblock %}       
 
-{% block content %}
+{% block head %}
+    <link rel="stylesheet" href="{% static 'css/dashboard/base_dash.css' %}" media="screen" />
+    <link rel="stylesheet" href="{% static 'css/medico/perfil/minha_agenda.css' %}">
+{% endblock head %} 
 
-<section>
+{% block botoes %}
+<section class="section_minha_agenda">
+    {% block profile-title %}
+        <h1 class="titulo">PRONTUÁRIOS</h1>
+    {% endblock profile-title %}
+    
+    {% block accounts_container %}
+    {% endblock accounts_container %}
 
-    <div class="container_title_historico">
-        <div>
-            <img src="{% static 'img/dashboard/perfil_icon/icone_01.png' %}" alt="perfil">
-            <h1 class="texto">PRONTUÁRIOS</h1>
-        </div>
-        <div>
-            <select id="tipo_select" onchange="changePlaceholder()">
-                <option value="nome">Nome</option>
-                <option value="cpf">CPF</option>
-            </select>
-            <input id="tipo_input" placeholder="Selecione">
-        </div>
-        <div>
-            <form method="GET">
-                <input type="date" name="data_consulta">
-                <button type="submit">FILTRAR</button>
-            </form>
-        </div>
-    </div>
+    <div class="container_filter">
+        <form method="GET">
+            <input type="date" name="data_consulta">
+            <button type="submit">FILTRAR</button>
+        </form>
+    </div> 
 
     <div class="container_consultas">
         {% if user.is_staff or user.is_superuser %}
             {% if consultas %}
                 {% for consulta in consultas %}                 
-                    <div class="consulta-item" id="historico-bg">
+                    <div class="consulta-item" id="consulta-bg-prontuario"> 
 
                         <p>Paciente: {{ consulta.cliente }}<br>
                             Prontuário: {{ consulta.cliente.id }}
@@ -52,6 +45,8 @@
                             Hora: {{ horario }}</p>
                         {% endwith %}
 
+                        <p>Status: <br> {{consulta.status_cons}}</p>
+
                         <img src="{% static 'img/icons/prontuario.svg' %}" alt="ícone ilustrativo prontuário">
 
                     </div>
@@ -64,7 +59,4 @@
 
 </section>
 
-{% endblock content %}
-{% block scripts %}
-    <script src="{% static 'js/filtro_paciente.js' %}"></script>
-{% endblock %}
+{% endblock botoes %}
