--- a/static/css/medico/perfil/minha_agenda.css
+++ b/static/css/medico/perfil/minha_agenda.css
@@ -8,21 +8,18 @@
     width: 100%;
     justify-content: flex-end;
 }
-.container_filter input, button,
-.container_historico input, select, button {
+.container_filter input, button {
     height: 40px;
     border: none;
     margin-right: 10px;
     border-radius: 10px;
 }
 
-.container_filter input,
-.container_historico input {
+.container_filter input {
     padding: 0 10px;
 }
 
-.container_filter button,
-.container_historico button {
+.container_filter button {
     width: 100px;
     background-color: var(--verde);
     font-family: var(--texto);
@@ -44,7 +41,8 @@
 }
 
 .consulta-item {
-    width: 80%;
+    width: 90%;
+    height: auto;
     padding: 10px; /* Ajustado para garantir espaço interno */
 
     border-radius: 10px;
@@ -55,4 +53,18 @@
     align-items: center;
     justify-content:space-around;
     box-sizing: border-box; /* Garante que padding não expanda a div */
+}
+
+.consulta-item img {
+    width: 40px;
+    height: 40px;
+    font-size: 30px;
+}
+
+.consulta-item p {
+    font-weight: 600;
+}
+
+#consulta-bg-prontuario {
+    background-color: var(--cinza-claro);
 }
