--- a/static/css/dashboard/base_dash.css
+++ b/static/css/dashboard/base_dash.css
@@ -10,6 +10,12 @@ img {
     width: 100%;
 }
 
+.form-header-dash {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
 /* estilo e posicionamento da janela azul */
 .left_menu {
     max-width: 300px;
