--- a/templates/base.html
+++ b/templates/base.html
@@ -47,15 +47,15 @@
             </li>
             {% endif %} {% endcomment %}
             {% if user.is_authenticated %}
-              <li><a href="{% url 'accounts:index' %}">Minha Conta</a></li>
-              <li><a href="#" id="button-back" onclick="history.back()">Voltar</a></li>
+            <form method="post" action="{% url 'accounts:logout' %}" class="form-header-dash">
+              {% csrf_token %} 
+              <li><a href="{% url 'accounts:index' %}" class="custom_btn_logout">Minha Conta</a></li>
+              <li><a href="#" id="button-back" onclick="history.back()" class="custom_btn_logout">Voltar</a></li>
               <li><button type="submit" class="custom_btn_logout">Sair</button></li>
-              <form method="post" action="{% url 'accounts:logout' %}">
-                {% csrf_token %} 
-              </form>
-              {% else %}
-              <li><a href="{% url 'accounts:login' %}">Login</a></li>
-              <li><a href="#" id="button-back" onclick="history.back()">Voltar</a></li>
+            </form>
+            {% else %}
+            <li><a href="{% url 'accounts:login' %}">Login</a></li>
+            <li><a href="#" id="button-back" onclick="history.back()">Voltar</a></li>
             {% endif %}
           </ul>
         </nav>
