feature: adicionado block para adicionar botoes do paciente

--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -38,6 +38,8 @@
             </a>
         </div>
 
+        {% block add_botoes %}{% endblock add_botoes %}
+
         {% if request.user.is_staff or request.user.is_superuser %}
             <div class="btn_main">
                 <a href="{% url 'medicos:agenda_lista'%}">
