--- a/templates/clientes/consulta_lista.html
+++ b/templates/clientes/consulta_lista.html
@@ -1,11 +1,20 @@
-{% extends "accounts/index.html" %}
+{% extends "base_dash.html" %}
+{% load static %}
+
+{% block head %}
+    <link rel="stylesheet" href="{% static "css/formulario/list.css" %}">
+    <link rel="stylesheet" href="{% static "css/dashboard/base_dash.css" %}">
+{% endblock head %}
 
 {% block title %}
     Minhas Consultas
 {% endblock %}
 
 {% block accounts_container %}
-<h2>Minhas Consultas</h2>
+<div class="content">
+    <div>
+        <h2 class="titulo__padrao">Minhas Consultas</h2>
+    </div>
 <table class="table table-bordered">
     <thead>
         <tr>
@@ -49,6 +58,14 @@
                     <i class="fas fa-trash-alt"></i>
                 </a>
             </td>
+            {% comment %} <td>
+                <a href="{% url 'medicos:agendar_consulta_atualizar' consulta.id %}" class="text-primary" style="padding-left: 10px; text-decoration: none;">
+                    <i class="fas fa-edit"></i>
+                </a>
+                <a href="{% url 'medicos:agendar_consulta_deletar' consulta.id %}" class="mr-1 text-danger" style="padding-left: 10px; text-decoration: none;">
+                    <i class="fas fa-trash-alt"></i>
+                </a>
+            </td> {% endcomment %}
         </tr>
         {% endfor %}
     </tbody>
