fix: feito alteração no block title para nao somar os titulos das paginas

--- a/templates/base_dash.html
+++ b/templates/base_dash.html
@@ -1,8 +1,9 @@
 {% extends 'base.html'%}
+
 {% load static %}
 
 {% block title %}
-    {{ block.super }} | Minha Conta
+    {{ block.super }}
 {% endblock %}
 
 {% block head %}
