--- a/medicos/templates/medicos/prontuario_pacientes.html
+++ b/medicos/templates/medicos/prontuario_pacientes.html
@@ -22,8 +22,11 @@
 
     <div class="container_filter">
         <form method="GET">
+            {% csrf_token %}
+            <input id="nome_funcionario" placeholder="NOME">
+            <input id="cpf_funcionario" placeholder="CPF">
             <input type="date" name="data_consulta">
-            <button type="submit">FILTRAR</button>
+            <button type="submit">BUSCAR</button>
         </form>
     </div> 
 
@@ -40,14 +43,12 @@
                         <p>Especialidade: {{ consulta.agenda.medico.especialidade }}<br>
                             Médico(a): Dr(a) {{ consulta.agenda.medico }}</p>
                             
-                        {% with consulta.agenda|slice:"13:" as horario %}
                         <p>Data: {{ consulta.agenda.dia }}<br>
-                            Hora: {{ horario }}</p>
-                        {% endwith %}
+                            Hora: {{ consulta.agenda.get_horario_display }}</p>
 
                         <p>Status: <br> {{consulta.status_cons}}</p>
 
-                        <a href="{% url 'medicos:prontuario' consulta.cliente.id %}">
+                        <a href="{% url 'medicos:prontuario' consulta.id %}">
                             <img src="{% static 'img/icons/prontuario-medico.png' %}" alt="ícone ilustrativo prontuário">
                         </a>
 
