--- a/templates/base.html
+++ b/templates/base.html
@@ -48,12 +48,12 @@
             </li>
             {% endif %} {% endcomment %}
             {% if user.is_authenticated %}
-            <form method="post" action="{% url 'accounts:logout' %}" class="form-header-dash">
               {% csrf_token %} 
               <li><a href="{% url 'accounts:index' %}" class="custom_btn_logout">Minha Conta</a></li>
               <li><a href="#" id="button-back" onclick="history.back()" class="custom_btn_logout">Voltar</a></li>
+              <form method="post" action="{% url 'accounts:logout' %}" class="navbar-form">
               <li><button type="submit" class="custom_btn_logout">Sair</button></li>
-            </form>
+              </form>
             {% else %}
             <li><a href="{% url 'accounts:login' %}">Login</a></li>
             <li><a href="#" id="button-back" onclick="history.back()">Voltar</a></li>
