--- a/medicos/templates/medicos/agenda_lista.html
+++ b/medicos/templates/medicos/agenda_lista.html
@@ -7,7 +7,7 @@
 {% endblock head %}
 
 {% block title %}
-    Agendas
+    Agendas | {{ block.super }}
 {% endblock %}
 
 {% block accounts_container %}
