--- a/medicos/templates/medicos/especialidade_lista.html
+++ b/medicos/templates/medicos/especialidade_lista.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    Especialidade
+    Especialidade | {{ block.super }}
 {% endblock %}
 
 {% block head %}
