--- a/medicos/templates/medicos/prontuario.html
+++ b/medicos/templates/medicos/prontuario.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-    Clinica Vision | Prontuário: {{ cliente.nome }}
+    Prontuário | {{ block.super }}
 {% endblock %}
 
 {% block head %}
