--- a/medicos/templates/medicos/prontuario_pacientes.html
+++ b/medicos/templates/medicos/prontuario_pacientes.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-    Clínica Vision | Pacientes
+    Pacientes | {{ block.super }}
 {% endblock %}       
 
 {% block head %}
