--- a/static/css/login/login.css
+++ b/static/css/login/login.css
@@ -13,7 +13,7 @@ main {
     background-repeat: no-repeat;
     display: flex;
     justify-content: center;
-    height: 900px;
+    height: auto;
     width: 40%;
 }
 
