--- a/medicos/templates/medicos/meus_horarios.html
+++ b/medicos/templates/medicos/meus_horarios.html
@@ -13,9 +13,9 @@
 {% block accounts_container %}
 <div class="content">
     <div>
-        <h2 class="titulo__padrao">Horários Disponíveis</h2>
+        <h1 class="titulo">MINHA AGENDA</h1>
     </div>
-<table class="table table-bordered">
+<table class="table table-bordered" id="tabela_agenda">
     <thead>
         <tr>
             <th>
