--- a/medicos/templates/medicos/minha_agenda.html
+++ b/medicos/templates/medicos/minha_agenda.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-    Minha Agenda | {{ block.super }}
+    Minha Agenda | Clínica Vision
 {% endblock %}       
 
 {% block head %}
