--- a/medicos/templates/medicos/perfil.html
+++ b/medicos/templates/medicos/perfil.html
@@ -33,7 +33,7 @@
       </div>
       
       <div class="btn_main">
-          <a href="{% url 'clientes:cliente_atualizar'%}">
+          <a href="{% url 'medicos:atualizar_cadastro'%}">
               <img src="{% static 'img/dashboard/perfil_icon/icone_02.png' %}" alt="ícone ilustrativo clínica">
               <h2>atualizar<br>meus dados</h2>
           </a>
@@ -44,22 +44,22 @@
       {% if request.user.is_staff or request.user.is_superuser %}
           <div class="btn_main">
               <a href="{% url 'medicos:listar_horarios'%}">
-                  <img id="centralize" src="{% static 'img/dashboard/icone_calendario.png' %}" alt="ícone ilustrativo agendamento">
-                  <h2>horários<br>disponíveis</h2>
+                  <img src="{% static 'img/dashboard/icone_agenda.png' %}" alt="ícone ilustrativo agendamento">
+                  <h2>minha agenda</h2>
               </a>
           </div>
           
           <div class="btn_main">
               <a href="{% url 'medicos:listar_consultas'%}">
-                  <img src="{% static 'img/dashboard/icone_agenda.png' %}" alt="ícone perfil funcionário">
-                  <h2>minha agenda</h2>
+                  <img src="{% static 'img/dashboard/icone_calendario.png' %}" alt="ícone perfil funcionário">
+                  <h2>consultas</h2>
               </a> 
           </div>
 
           <div class="btn_main">
               <a href="{% url 'medicos:pacientes'%}">
                   <img src="{% static 'img/dashboard/icone_paciente.png' %}" alt="ícone perfil paciente">
-                  <h2>pacientes</h2>
+                  <h2>prontuários</h2>
               </a>
           </div>
       {% endif %}
