fix: ajustado titulo da pagina de agenda

--- a/static/css/formulario/list.css
+++ b/static/css/formulario/list.css
@@ -1,7 +1,6 @@
 .content {
   display: flex;
   flex-direction: column;
-  margin-top: 50px;
   width: 100%;
 }
 
@@ -14,4 +13,8 @@
 .content>div>a {
   width: auto;
   height: 40px;
+}
+
+#tabela_agenda {
+  margin-top: 30px;
 }
