--- a/templates/base.html
+++ b/templates/base.html
@@ -48,7 +48,7 @@
             </li>
             {% endif %} {% endcomment %}
             {% if user.is_authenticated %}
-              <li><a href="{% url 'accounts:index' %}" class="custom_btn_logout">Minha Conta</a></li>
+              <li><a href="{% url 'accounts:redirect' %}" class="custom_btn_logout">Minha Conta</a></li>
               <li><a href="#" id="button-back" onclick="history.back()" class="custom_btn_logout">Voltar</a></li>
               <form method="post" action="{% url 'accounts:logout' %}" class="navbar-form">
               {% csrf_token %}                 
