fix: ajustado fonte do titulo

--- a/accounts/templates/accounts/update_password.html
+++ b/accounts/templates/accounts/update_password.html
@@ -12,7 +12,7 @@
 {% block accounts_container %}
 <section class="form-dash">
   <div>
-    <h2 class="titulo__padrao">Alterar Dados</h2>
+    <h1 class="titulo">Alterar Senha</h1>
   </div>
   <form class="form-horizontal" action="" method="post">
       {% csrf_token %}
