--- a/medicos/templates/medicos/prontuario.html
+++ b/medicos/templates/medicos/prontuario.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="{% static 'css/medico/perfil/prontuario.css' %}">
 {% endblock head %} 
 
+{% block nav_header %}{% endblock nav_header %}
+
 {% block container %}
 
 <main>
