--- a/medicos/templates/medicos/consultas_lista.html
+++ b/medicos/templates/medicos/consultas_lista.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block title %}
-    Prontuários | Clínica Vision
+    Minha Agenda | Clínica Vision
 {% endblock %}       
 
 {% block head %}
@@ -14,8 +14,7 @@
 {% block botoes %}
 <section class="section_minha_agenda">
     {% block profile-title %}
-        <h1 class="titulo">PRONTUÁRIOS</h1>
-        <p>* Prontúarios de pacientes atendidos</p>
+        <h1 class="titulo">Consultas Futuras</h1>
     {% endblock profile-title %}
     
     {% block accounts_container %}
@@ -23,11 +22,8 @@
 
     <div class="container_filter">
         <form method="GET">
-            {% csrf_token %}
-            <input id="nome_funcionario" placeholder="NOME">
-            <input id="cpf_funcionario" placeholder="CPF">
             <input type="date" name="data_consulta">
-            <button type="submit">BUSCAR</button>
+            <button type="submit">FILTRAR</button>
         </form>
     </div> 
 
@@ -35,7 +31,7 @@
         {% if user.is_staff or user.is_superuser %}
             {% if consultas %}
                 {% for consulta in consultas %}                 
-                    <div class="consulta-item" id="consulta-bg-prontuario"> 
+                    <div class="consulta-item">
 
                         <p>Paciente: {{ consulta.cliente }}<br>
                             Prontuário: {{ consulta.cliente.id }}
@@ -56,7 +52,7 @@
                     </div>
                 {% endfor %}
             {% else %}
-                    <h3>Sem resultados.</h3>
+                    <h3>Não há consultas agendadas para essa data.</h3>
             {% endif %}
         {% endif %}
     </div>
